--- a/es.yml
+++ b/es.yml
@@ -19,8 +19,8 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
-es:
-  hello: "Hola world"
+en:
+  hello: "Hello world"
   time:
     formats:
       submitted: "%d/%m/%Y"
