--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
 
 development:
   <<: *default
-  database: project_development_bk 
+  database: project_development_bk2 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
